--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ EditorConfig==0.12.3
 Flask==2.1.2
 Flask-Caching==2.0.0
 Flask-Compress==1.12
+Flask-Cors==3.0.10
 geobuf==1.1.1
 gunicorn==20.1.0
 itsdangerous==2.1.2
